feat: implement LearningPathwayService and add comprehensive unit tests for pathway generation and rerouting